Navbar "sticky" v1 (+meta viewport)
Added CCS about navbar to make it "sticky", including javascript (untested)

+Added meta viewport to all pages in head so webpage adapts to device width

--- a/WEBSITE/CSS/styles.css
+++ b/WEBSITE/CSS/styles.css
@@ -1,3 +1,35 @@
+#navbar h1 {
+  color: : pink;
+}
+
+#navbar {
+  overflow: hidden;
+  background-color: #333;
+  min-height: 14vh;
+}
+
+#navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+
+/* The sticky class is added to the navbar with JS when it reaches its scroll position */
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+/* Add some top padding to the page content to prevent sudden quick movement
+(as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
+.sticky + .content {
+  padding-top: 20px;
+}
+
 body
 {
   color:rgb(49,58,69);
