--- a/WEBSITE/CSS/styles.css
+++ b/WEBSITE/CSS/styles.css
@@ -72,24 +72,43 @@
 
 body
 {
-  color:rgb(49,58,69);
+  background-image: url("https://media.istockphoto.com/photos/crepes-picture-id153710716?k=6&m=153710716&s=612x612&w=0&h=9GZVYvwE1WMRq1NseYthOSFJtmFkpW3ClLbEqd5bBDc=");
+  height: 100%;
+  font-family: Georgia;
+}
+
+body, html {
+  height: 100%;
+}
+
+.bg {
+  /* The image used */
+  background-image: url("https://media.istockphoto.com/photos/crepes-picture-id153710716?k=6&m=153710716&s=612x612&w=0&h=9GZVYvwE1WMRq1NseYthOSFJtmFkpW3ClLbEqd5bBDc=");
+
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 div{
-  min-height: 50vh;
+  min-height: 10vh;
   Width:100vw;
-  background-color: pink;
 }
 
 h1,h2 {
   text-align: center;
-  font-family: cursive;
+  font-family: Georgia;
+  font-style: italic;
 }
 
 h1{
   font-size:4.5em;
   text-align: center;
-  font-family: Verdana;
+  font-family: Georgia;
 }
 h2{
   font-size: 2em;
@@ -100,14 +119,26 @@ img{width: 100%
 .container {
       position: relative;
       text-align: center;
-      color: white;
     }
 
 p{
-  text-align: center;
+  text-align: left;
   width:90%;
-  margin: 0;
+  margin-left: 80px;
   font-size: 1em
+}
+
+div.names {
+  margin-left: 80px;
+  font-size: 2em;
+  font-family: Georgia;
+  font-style: italic;
+  margin-bottom: 20px;
+}
+
+div.text {
+  margin-left: 70px;
+  margin-top: 0px;
 }
 
 a{
